# JupyterPicoSDK

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  kernel.json  load_code.sh  main.c  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
pico_kernel/: __main__.py  kernel.py  libs.py
src/JupyterPicoSDK/: __init__.py  kernel.py  post_install.py
src/JupyterPicoSDK/libs/: libs.py
src/JupyterPicoSDK/resources/: build_code.sh  install_dependencies.ps1  install_dependencies.sh  kernel.json
